# simdcsv

./: CMakeLists.txt  README.md  csv_reader.h  main.cpp  mmap.h
.github/workflows/: ci.yml
test/: CMakeLists.txt  test_csv_reader.cpp
